--- a/index.html
+++ b/index.html
@@ -26,12 +26,29 @@
       <section>
         <h2>소개말</h2>
         <p>
-          안녕하세요. 혁신적인 웹 솔루션을 개발하는 열정적인 웹 개발자
-          이동엽입니다.
+          안녕하세요. 새로운 도메인의 비즈니스 요구사항을 빠르게 파악하고
+          기술적 해결책을 제시할 수 있는 풀스택 개발자 이동엽입니다.
           <br />
-          다양한 프로젝트 경험을 통해 효율적이고 확장 가능한 시스템을 구축하는
-          데 전문성을 갖추고 있습니다.
+          전시, 에너지, 농업, 미디어 등 다양한 분야에서
+          프론트엔드부터 인프라까지 end-to-end 개발 경험을 쌓아왔습니다.
         </p>
+      </section>
+
+      <section>
+        <h2>주요 역량</h2>
+        <dl>
+          <dt>도메인 적응력</dt>
+          <dd>다양한 산업 분야의 경험으로 새로운 비즈니스 로직을 빠르게 이해</dd>
+
+          <dt>데이터 시각화</dt>
+          <dd>비즈니스 판단에 필요한 데이터를 효과적으로 전달하는 시각화 구현</dd>
+
+          <dt>풀스택 개발</dt>
+          <dd>기술 전반에 대한 지식으로 비즈니스 요구사항에 맞는 최적의 기술 선택</dd>
+
+          <dt>운영 효율화</dt>
+          <dd>시스템 분석을 통해 비효율적인 구조 및 기능 개선으로 리소스 최적화 가능</dd>
+        </dl>
       </section>
 
       <section>
